<resources>
    <string name="app_name">YourHealth</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="add">Add</string>
    <string name="your_health">YOUR HEALTH</string>
    <string name="dnt_have_acc">Don\'t Have An Account ?</string>
    <string name="click_here">Click Here</string>
    <string name="to_signup">To Sign Up</string>
    <string name="your_health_history">Your Health History</string>
    <string name="Disease">Disease</string>
    <string name="medicine">Medicine</string>
    <string name="doctor">Doctor</string>
    <string name="date">Date</string>
    <string name="add_health">Add Health Condition</string>
    <string name="save">SAVE</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="update">UPDATE</string>
</resources>
