<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/disease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/Disease"
        android:textColor="@color/cyan_44b6b4"
        android:textSize="16sp" />

    <View
        android:layout_width="0.7dp"
        android:layout_height="22dp"
        android:background="@android:color/black" />

    <TextView
        android:id="@+id/medicine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/medicine"
        android:textColor="@color/cyan_44b6b4"
        android:textSize="16sp" />

    <View
        android:layout_width="0.7dp"
        android:layout_height="22dp"
        android:background="@android:color/black" />

    <TextView
        android:id="@+id/doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/doctor"
        android:textColor="@color/cyan_44b6b4"
        android:textSize="16sp" />

    <View
        android:layout_width="0.7dp"
        android:layout_height="22dp"
        android:background="@android:color/black" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/date"
        android:textColor="@color/cyan_44b6b4"
        android:textSize="16sp" />

</LinearLayout>